--- a/Fun Projects/Movie Recommender.ipynb
+++ b/Fun Projects/Movie Recommender.ipynb
@@ -774,7 +774,248 @@
    "id": "c05ef9d3",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json\n",
+    "import csv\n",
+    "\n",
+    "def parse_json_to_csv(json_data):\n",
+    "    data = json.loads(json_data)\n",
+    "    csv_data = []\n",
+    "\n",
+    "    # Add header row\n",
+    "    csv_data.append([\"type\", \"id\", \"correlationId\", \"generatedAt\", \"businessUnit\", \"sourceReferenceId\",\n",
+    "                     \"sourceReferenceType\", \"sourceSystem\", \"resources.partyId\", \"data.channel\", \"data.id\",\n",
+    "                     \"data.ragStatus\", \"data.timestamp\", \"data.overallTelemetryTimestamp\", \"data.services.type\",\n",
+    "                     \"data.services.ragStatus\", \"data.services.serviceChecks.type\",\n",
+    "                     \"data.services.serviceChecks.ragStatus\", \"data.services.serviceChecks.timestamp\",\n",
+    "                     \"data.services.serviceChecks.data._dataType\",\n",
+    "                     \"data.services.serviceChecks.data.saleState\",\n",
+    "                     \"data.services.serviceChecks.data._dataType\",\n",
+    "                     \"data.services.serviceChecks.data.state\",\n",
+    "                     \"data.services.serviceChecks.data.updateTime\",\n",
+    "                     \"data.services.serviceChecks.type\",\n",
+    "                     \"data.services.serviceChecks.ragStatus\",\n",
+    "                     \"data.services.serviceChecks.timestamp\",\n",
+    "                     \"data.services.serviceChecks.data._dataType\",\n",
+    "                     \"data.services.serviceChecks.data.connectionType\",\n",
+    "                     \"data.services.serviceChecks.data.advertisedDownloadSpeed\",\n",
+    "                     \"data.services.serviceChecks.data.isBBTechChange\",\n",
+    "                     \"data.services.serviceChecks.data.yAxisUpperLimit\",\n",
+    "                     # Add historical speed columns\n",
+    "                     *[f\"data.services.serviceChecks.data.historicalSpeed.{i}.timestamp\" for i in range(10)],\n",
+    "                     *[f\"data.services.serviceChecks.data.historicalSpeed.{i}.downloadSpeed\" for i in range(10)],\n",
+    "                     # Add remaining columns\n",
+    "                     \"data.services.serviceChecks.data.technologyEffectiveFromDate\",\n",
+    "                     # Add in-home network columns\n",
+    "                     *[f\"data.devices.{i}.deviceSummary.device_mac_address\" for i in range(8)],\n",
+    "                     *[f\"data.devices.{i}.deviceSummary.device_model\" for i in range(8)],\n",
+    "                     *[f\"data.devices.{i}.deviceSummary.dim_device_model.name\" for i in range(8)],\n",
+    "                     *[f\"data.devices.{i}.deviceSummary.dim_device_model.description\" for i in range(8)],\n",
+    "                     *[f\"data.devices.{i}.deviceSummary.region\" for i in range(8)],\n",
+    "                     *[f\"data.devices.{i}.deviceSummary.reset_id\" for i in range(8)],\n",
+    "                     *[f\"data.devices.{i}.deviceSummary.device_software_version\" for i in range(8)],\n",
+    "                     *[f\"data.devices.{i}.deviceSummary.timestamp\" for i in range(8)],\n",
+    "                     *[f\"data.devices.{i}.serviceCheckGroups.{j}.type\" for i in range(8) for j in range(4)],\n",
+    "                     *[f\"data.devices.{i}.serviceCheckGroups.{j}.ragStatus\" for i in range(8) for j in range(4)]]\n",
+    "    )\n",
+    "\n",
+    "    # Recursive function to parse nested JSON\n",
+    "    def recursive_parse(data, prefix=\"\"):\n",
+    "        if type(data) == dict:\n",
+    "            for key, value in data.items():\n",
+    "                recursive_parse(value, prefix + key + \".\")\n",
+    "        elif type(data) == list:\n",
+    "            for item in data:\n",
+    "                recursive_parse(item, prefix)\n",
+    "        else:\n",
+    "            csv_data[-1].append(data)\n",
+    "\n",
+    "    # Parse the JSON data\n",
+    "    recursive_parse(data)\n",
+    "\n",
+    "    # Write CSV file\n",
+    "    with open(\"output.csv\", \"w\", newline=\"\") as f:\n",
+    "        writer = csv.writer(f)\n",
+    "        writer.writerows(csv_data)\n",
+    "\n",
+    "# JSON data\n",
+    "json_data = '''\n",
+    "{\n",
+    "   \"type\":\"DTA_SERVICE_CHECK\",\n",
+    "   \"id\":\"41cd9290-5646-4502-968d-770fb06b0f09\",\n",
+    "   \"correlationId\":\"05df5a0156730201\",\n",
+    "   \"generatedAt\":\"2023-08-03T21:41:16.840654+01:00\",\n",
+    "   \"businessUnit\":\"SKY_DOMESTIC\",\n",
+    "   \"sourceReferenceId\":\"12058485732991029984410\",\n",
+    "   \"sourceReferenceType\":\"PARTY_ID\",\n",
+    "   \"sourceSystem\":\"LWS_ARS\",\n",
+    "   \"resources\":{\n",
+    "      \"partyId\":\"12058485732991029984410\"\n",
+    "   },\n",
+    "   \"data\":{\n",
+    "      \"channel\":\"ONLINE\",\n",
+    "      \"id\":\"9V5IarJQQHI33SxQ6aTs\",\n",
+    "      \"ragStatus\":\"GREEN\",\n",
+    "      \"timestamp\":\"2023-08-03T21:41:16.822366+01:00\",\n",
+    "      \"overallTelemetryTimestamp\":\"2023-08-03T21:30:00+01:00\",\n",
+    "      \"services\":[\n",
+    "         {\n",
+    "            \"type\":\"BROADBAND\",\n",
+    "            \"ragStatus\":\"GREEN\",\n",
+    "            \"serviceChecks\":[\n",
+    "               {\n",
+    "                  \"type\":\"MAJOR_SERVICE_OUTAGE\",\n",
+    "                  \"ragStatus\":\"GREEN\",\n",
+    "                  \"timestamp\":\"2023-08-03T21:41:16.822139+01:00\"\n",
+    "               },\n",
+    "               {\n",
+    "                  \"type\":\"SUBSCRIPTION_STATUS\",\n",
+    "                  \"ragStatus\":\"GREEN\",\n",
+    "                  \"timestamp\":\"2023-08-03T21:41:16.822145+01:00\",\n",
+    "                  \"data\":{\n",
+    "                     \"_dataType\":\"SUBSCRIPTION_STATUS\",\n",
+    "                     \"saleState\":\"ACTIVE\"\n",
+    "                  }\n",
+    "               },\n",
+    "               {\n",
+    "                  \"type\":\"SKY_HUB_AUTHENTICATED\",\n",
+    "                  \"ragStatus\":\"GREEN\",\n",
+    "                  \"timestamp\":\"2023-08-03T21:41:16.82215+01:00\",\n",
+    "                  \"data\":{\n",
+    "                     \"_dataType\":\"SKY_HUB_AUTHENTICATED\",\n",
+    "                     \"state\":[\n",
+    "                        \"ALIVE\"\n",
+    "                     ],\n",
+    "                     \"updateTime\":\"2023-08-03T21:28:19+01:00\"\n",
+    "                  }\n",
+    "               },\n",
+    "               {\n",
+    "                  \"type\":\"HUB_RETRAINRATE\",\n",
+    "                  \"ragStatus\":\"GREY\",\n",
+    "                  \"timestamp\":\"2023-08-03T21:30:00+01:00\"\n",
+    "               },\n",
+    "               {\n",
+    "                  \"type\":\"HUB_DOWNSTREAMERRORRATE\",\n",
+    "                  \"ragStatus\":\"GREY\",\n",
+    "                  \"timestamp\":\"2023-08-03T21:30:00+01:00\"\n",
+    "               },\n",
+    "               {\n",
+    "                  \"type\":\"HUB_SPEEDTEST\",\n",
+    "                  \"ragStatus\":\"GREEN\",\n",
+    "                  \"timestamp\":\"2023-08-02T13:00:00+01:00\",\n",
+    "                  \"data\":{\n",
+    "                     \"_dataType\":\"HUB_SPEEDTEST\",\n",
+    "                     \"connectionType\":\"FTTP\",\n",
+    "                     \"advertisedDownloadSpeed\":\"500.0\",\n",
+    "                     \"isBBTechChange\":false,\n",
+    "                     \"yAxisUpperLimit\":\"625\",\n",
+    "                     \"historicalSpeed\":[\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-07-24T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        },\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-07-25T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        },\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-07-26T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        },\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-07-27T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        },\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-07-28T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        },\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-07-29T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        },\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-07-30T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        },\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-07-31T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        },\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-08-01T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        },\n",
+    "                        {\n",
+    "                           \"timestamp\":\"2023-08-02T13:00:00+01:00\",\n",
+    "                           \"downloadSpeed\":\"500.0\"\n",
+    "                        }\n",
+    "                     ],\n",
+    "                     \"technologyEffectiveFromDate\":\"2021-11-08T10:44:08Z\"\n",
+    "                  }\n",
+    "               }\n",
+    "            ],\n",
+    "            \"telemetryRagStatus\":\"GREEN\"\n",
+    "         },\n",
+    "         {\n",
+    "            \"type\":\"IN_HOME_NETWORK\",\n",
+    "            \"ragStatus\":\"GREEN\",\n",
+    "            \"serviceChecks\":[\n",
+    "               {\n",
+    "                  \"type\":\"HUB_CONNECTED_DEVICES\",\n",
+    "                  \"data\":{\n",
+    "                     \"_dataType\":\"HUB_CONNECTED_DEVICES\",\n",
+    "                     \"numberOfClientDevices\":\"8\"\n",
+    "                  }\n",
+    "               }\n",
+    "            ],\n",
+    "            \"telemetryRagStatus\":\"GREEN\",\n",
+    "            \"devices\":[\n",
+    "               {\n",
+    "                  \"_deviceType\":\"HUB\",\n",
+    "                  \"deviceSummary\":{\n",
+    "                     \"device_mac_address\":\"80751f4c8708\",\n",
+    "                     \"device_model\":\"SR203s\",\n",
+    "                     \"dim_device_model\":{\n",
+    "                        \"name\":\"Unknown\",\n",
+    "                        \"description\":\"Unknown\"\n",
+    "                     },\n",
+    "                     \"region\":\"UK\",\n",
+    "                     \"reset_id\":\"POR\",\n",
+    "                     \"device_software_version\":\"7.03.0100.R\",\n",
+    "                     \"timestamp\":\"2023-08-03T21:30:00+01:00\"\n",
+    "                  },\n",
+    "                  \"serviceCheckGroups\":[\n",
+    "                     {\n",
+    "                        \"type\":\"WIFI_STATUS\",\n",
+    "                        \"ragStatus\":\"GREEN\"\n",
+    "                     },\n",
+    "                     {\n",
+    "                        \"type\":\"POOR_COVERAGE\",\n",
+    "                        \"ragStatus\":\"GREEN\"\n",
+    "                     },\n",
+    "                     {\n",
+    "                        \"type\":\"SLOW_WIFI\",\n",
+    "                        \"ragStatus\":\"GREEN\"\n",
+    "                     },\n",
+    "                     {\n",
+    "                        \"type\":\"UNRELIABLE_WIFI\",\n",
+    "                        \"ragStatus\":\"GREEN\"\n",
+    "                     }\n",
+    "                  ],\n",
+    "                  \"type\":\"HUB\",\n",
+    "                  \"timestamp\":\"2023-08-03T21:30:00+01:00\"\n",
+    "               }\n",
+    "            ]\n",
+    "         }\n",
+    "      ],\n",
+    "      \"countryCode\":\"GBR\"\n",
+    "   }\n",
+    "}\n",
+    "'''\n",
+    "\n",
+    "parse_json_to_csv(json_data)"
+   ]
   }
  ],
  "metadata": {
@@ -793,7 +1034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
